--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,23 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>My React Proyect</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+<!--id enlace de next_U-->
     <div id='nextu'></div>
+<!--id lista-->
+    <div id="list"></div>
+<!--id Receta-->
+    <div id="root"></div>
+    <div id='img_pan' align='center'></div>
+    <div id='titulo'></div>
+    <div id='ingredientes'></div>
+    <div id='pasos'></div>
+
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
