My_React_Proyect.

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
     <div id='titulo'></div>
     <div id='ingredientes'></div>
     <div id='pasos'></div>
+<!--Lista Factory-->
+    <div id="Factory"></div>
 
 
     <!--
