My_React_Proyect.

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,9 @@
     <div id='pasos'></div>
 <!--Lista Factory-->
     <div id="Factory"></div>
-<!--id Ingreso-->
+<!--id Registro-->
+    <div id="Registro"></div>
+<!--id ingreso-->
     <div id="Ingreso"></div>
 
 
